# kalista

./: .buildinfo  .deepsource.toml  .gitignore  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/code_overview/: exceptions.doctree  kalista.models.doctree  rationale.doctree
.doctrees/getting_started/: installation.doctree  quickstart.doctree
.github/workflows/: documentation.yml  publish-to-pypi.yml
_modules/: index.html
_modules/kalista/models/: exceptions.html  game.html  league.html  match.html  player.html  schedule.html  standings.html  team.html  tournament.html
_sources/code_overview/: exceptions.rst.txt  kalista.models.rst.txt  rationale.rst.txt
_sources/getting_started/: installation.rst.txt  quickstart.rst.txt
code_overview/: exceptions.html  kalista.models.html  rationale.html
docs/: conf.py  index.rst
docs/getting_started/: quickstart.rst
getting_started/: installation.html  quickstart.html
kalista/: __init__.py  helpers.py
kalista/models/: __init__.py  exceptions.py  game.py  league.py  match.py  player.py  schedule.py  standings.py  team.py  tournament.py
tests/: conftest.py  game_test.py  league_test.py  match_test.py  player_test.py  schedule_test.py  standings_test.py  team_test.py
